# unicalc

unicalc/: CMakeLists.txt
unicalc/include/: calculator.h  rpn_calculator.h  rpn_converter.h  tokenizer.h
unicalc/src/: main.cpp
unicalc/src/core/: calculator.cpp  rpn_calculator.cpp  rpn_converter.cpp  tokenizer.cpp
unicalc/tests/: test_calculator.cpp  test_rpn_calculator.cpp  test_rpn_converter.cpp  test_tokenizer.cpp
